<resources>
    <string name="app_name">FirstStudyProjectECommerce</string>
    <string name="app_name_short">Study Project</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Contacts</string>
    <string name="about_us_text">About Program</string>
    <string name="main_scene_text">Home</string>
    <string name="logo_of_app_1">Study</string>
    <string name="logo_of_app_2">PRJ</string>
    <string name="study_prj">MyFirstStudyProject</string>
    <string name="course_start_date">Start:</string>
    <string name="course_level">Level:</string>
    <string name="course_description">Программа обучения Джава – рассчитана на новичков в данной сфере.\n\nЗа программу вы изучите построение графических приложений под ПК, разработку веб сайтов на основе Java  Spring Boot, изучите построение  полноценных Андроид приложений и отлично изучите сам язык Джава!</string>
    <string name="meme_text_field">Meme</string>
    <string name="about_text">
    У лукоморья дуб зелёный;\n
    Златая цепь на дубе том:\n
    И днём и ночью <b>кот учёный</b>\n
    Всё ходит по цепи кругом;\n
    Идёт <b>направо</b> - песнь заводит,\n
    <b>Налево</b> - сказку говорит.</string>
    <string name="title_activity_test">testActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="action_settings">Settings</string>
    <string name="action_first">first_option</string>
    <string name="action_second">second_option</string>
    <string name="action_third">third_option</string>
    <string name="other_option_first">other_option_first</string>
    <string name="other_option_second">other_option_second</string>
    <string name="other">Other</string>

</resources>