<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:onClick="onSettingItemClick"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_first"
        android:orderInCategory="100"
        android:title="@string/action_first"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_second"
        android:orderInCategory="100"
        android:title="@string/action_second"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_third"
        android:orderInCategory="100"
        android:title="@string/action_third"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="101"
        android:title="@string/other">
        <menu>
            <item android:title="@string/other_option_first"
                android:orderInCategory="100"
                android:onClick="onSettingItemClick"/>
            <item android:title="@string/other_option_second"
                android:orderInCategory="100"
                android:onClick="onSettingItemClick"/>
        </menu>
    </item>
</menu>